@@ -4,11 +4,11 @@ Generates package naming variables for use with rules_pkg.
 
 load("@rules_pkg//:providers.bzl", "PackageVariablesInfo")
 load("@bazel_tools//tools/cpp:toolchain_utils.bzl", "find_cpp_toolchain")
-load(":protobuf_version.bzl", "PROTOBUF_VERSION")
+load(":protobuf_version.bzl", "PROTOC_VERSION")
 
 def _package_naming_impl(ctx):
   values = {}
-  values["version"] = PROTOBUF_VERSION
+  values["version"] = PROTOC_VERSION
 
   # infer from the current cpp toolchain.
   toolchain = find_cpp_toolchain(ctx)
