@@ -1,1 +1,2 @@
-PROTOBUF_VERSION = '3.20.1'
+PROTOC_VERSION = '3.20.1'
+PROTOBUF_JAVA_VERSION = '3.20.1'
