@@ -41,6 +41,7 @@
 #define GOOGLE_PROTOBUF_WIRE_FORMAT_LITE_H__
 
 
+#include <limits>
 #include <string>
 
 #include <google/protobuf/stubs/common.h>
